[tool.poetry]
name = "ytsummary"
version = "0.1.0"
description = "Download and summarize YouTube video subtitles"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "ytsummary" }]

[tool.poetry.dependencies]
python = "^3.12"
cython = "^3.0.11"
yt-dlp = "^2024.8.6"
setuptools = "^72.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
taskipy = "^1.13.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest"
lint = "ruff check ."

[tool.ruff]
line-length = 88
